# p16core-sim

./: Cargo.toml  default.nix
src/: exec.rs  main.rs  mem.rs  p16core.rs  regs.rs
test/: src.X.production.hex  src.asm
test/4_1/: L4.X.production.cof  L4.X.production.hex  L4.X.production.map
test/4_2/: L4.X.production.cof  L4.X.production.hex  L4.X.production.map
test/4_5/: L4.X.production.cof  L4.X.production.hex  L4.X.production.map
