[package]
name = "p16core-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.2.0"
flame = { version = "0.2.2", optional = true }
hex = "0.4.3"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
], optional = true }
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }

[features]
flame-feature = ["flame"]
pprof-feature = ["pprof"]
trace = ["tracing", "tracing-subscriber"]
